--- a/sql-ecol-handout.tex
+++ b/sql-ecol-handout.tex
@@ -48,7 +48,7 @@
 \textit{plot_id} & \textit{plot_type} \\
 1 & Spectab exclosure \\
 2 & Control \\
-\vdots & \vdots \\
+$\vdots$ & $\vdots$ \\
 23 & Rodent Exclosure \\
 24 & Rodent Exclosure \\
 \hline
