Set up intro to Jupyter notebooks

--- a/python01_remote.ipynb
+++ b/python01_remote.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "source": [
-    "# Day 01\n",
+    "# Day 01 - Running Python and Using Jupyter Notebooks\n",
     "\n",
     "- Running and Quitting\n",
     "- Variables and Assignment\n",
@@ -32,6 +32,52 @@
     "- Libraries\n",
     "- Conditionals\n",
     "- Lists\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "# TIGER INSTRUCTIONS HERE\n",
+    "Future site of instructions for participants to log into Tiger and start up their notebook."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Questions:\n",
+    "- How can I run Python programs? \n",
+    "\n",
+    "## Objectives:  \n",
+    "- Log into OSU's Tiger Research Compute Cloud\n",
+    "- Launch a Jupyter notebook.\n",
+    "- Explain the difference between a Python script and a Jupyter notebook.\n",
+    "- Create Markdown cells in a notebook.\n",
+    "- Create and run Python cells in a notebook.\n",
+    "\n",
+    "## Running a Pythong Program\n",
+    "- Python scripts are plain-text files.\n",
+    "- Files usually end with `.py` extenstion.\n",
+    "- Scripts require a Python interpreter to run.\n",
+    "- You have lots of options when creating a Python script: integrated developer environments (IDE's), various text editors, and Jupyter notebooks.\n",
+    "\n",
+    "## Jupyter Notebooks\n",
+    "- We will use a Jupyter Notebook for running and editing Python commands.\n",
+    "- Notebooks are intended to imitate the feel of a lab notebook and are designed for presenting output.\n",
+    "- Content is broken into three types of blocks: Markdown, code blocks, and output/results.\n",
+    "- Notebooks can be saved as `.ipynb` files that you can share with collaborators.\n",
+    "- Notebooks are separate from the Python interpreter.\n",
+    "- Jupyter notebooks can be run in the cloud or locally on your computer.\n",
+    "- If you decide to run notebooks locally on your computer, we recommend using the [Anaconda Python](https://www.anaconda.com/products/individual) distribution.\n",
+    "\n",
+    "## Using Jupyter Notebooks\n",
+    "- There are two modes:\n",
+    "  - Edit mode\n",
+    "  - Command mode\n",
+    "- After clicking on a cell, type <kbd>Esc</kbd> to enter command mode and <kbd>Return</kbd> to enter edit mode.\n",
+    "- Command mode allows you to take change the cell type to either Markdown (<kbd>m</kbd>) or Python code (<kbd>y</kbd>).\n",
+    "- To execute the content of a cell type <kbd>Shift</kbd>+<kbd>Return</kbd>."
    ],
    "cell_type": "markdown",
    "metadata": {}
