--- a/python01_remote.ipynb
+++ b/python01_remote.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1600721448095",
+   "name": "python_defaultSpec_1600727392206",
    "display_name": "Python 3.7.6 64-bit ('base': conda)"
   }
  },
@@ -78,6 +78,114 @@
     "- After clicking on a cell, type <kbd>Esc</kbd> to enter command mode and <kbd>Return</kbd> to enter edit mode.\n",
     "- Command mode allows you to take change the cell type to either Markdown (<kbd>m</kbd>) or Python code (<kbd>y</kbd>).\n",
     "- To execute the content of a cell type <kbd>Shift</kbd>+<kbd>Return</kbd>."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Markdown\n",
+    "- Markdown is a markup language used to format text.\n",
+    "- Designed for bloggers to format text without needing to learn HTML.\n",
+    "- Jupyter notebooks employ Markdown to allow us to explain code blocks and content within our notebook.\n",
+    "- These notes employ markdown. Double click this text to see how I entered it in edit mode.\n",
+    "- Here is a [Markdown cheat sheet](https://www.markdownguide.org/cheat-sheet) for further reference."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Key Markdown Conventions"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Headings\n",
+    "\n",
+    "# Level 1\n",
+    "## Level 2\n",
+    "### Level 3"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Lists\n",
+    "\n",
+    "* Asterisks\n",
+    "- and dashes\n",
+    "- create unordered lists "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "1. Numbers\n",
+    "3. off any\n",
+    "1. order create\n",
+    "2. ordered lists"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "- This convention is helpful for updating documentation later."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "1. First step\n",
+    "1. then add\n",
+    "1. a step"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "1. First step\n",
+    "1. then add\n",
+    "1. then add\n",
+    "1. a step"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "- Adding spaces in front \n",
+    "  - of a line\n",
+    "    - creates\n",
+    "    1. sublists"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Math"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "- Markdown supports $LaTeX$ notation between `$`'s, so you write equations in your notebook:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "$$\\zeta (s)=\\sum _{n=1}^{\\infty }{\\frac {1}{n^{s}}}$$"
    ],
    "cell_type": "markdown",
    "metadata": {}
