--- a/python01_remote.ipynb
+++ b/python01_remote.ipynb
@@ -547,6 +547,531 @@
    "metadata": {}
   },
   {
+   "source": [
+    "# Lesson 03 - Data Types and Type Conversion"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Questions\n",
+    "- What kind of data types does Python provide?\n",
+    "- How can I convert one type to another?\n",
+    "\n",
+    "## Objectives\n",
+    "- Distinguish key differences between integers and floating point numbers.\n",
+    "- Distinguish key differences between numbers and character strings.\n",
+    "- Use built-in functions to cnovert between integers, floating-point numbers, and strings."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Every Object has a Type\n",
+    "- Every object in your Python workspace has a type.\n",
+    "- A type determines an object's behavior and what you can do with that object.\n",
+    "- The integer (`int`) type represents positive and negative whole numbers.\n",
+    "- Strings (`str`) hold text.\n",
+    "  - Strings must be contained within quotation marks (matching double or single), why?\n",
+    "- Float (`float`) represents numbers with a decimal."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Use `type()` to Find an Object's Type\n",
+    "- The built-in function `type()` returns an object's data type.\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "<class 'int'>\n"
+    }
+   ],
+   "source": [
+    "print(type(52))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "<class 'str'>\n"
+    }
+   ],
+   "source": [
+    "fitness = 'average'\n",
+    "print(type(fitness))"
+   ]
+  },
+  {
+   "source": [
+    "## Types Control Valid Operations for an Object\n",
+    "-  An object's type determines what you can do with it."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2\n"
+    }
+   ],
+   "source": [
+    "print(5 - 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'str' and 'str'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-35e8597b28d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'hello'\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;34m'h'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello' - 'h')"
+   ]
+  },
+  {
+   "source": [
+    "## Strings can be Added and Multiplied\n",
+    "- The string type allows you to add and multiply with strings.\n",
+    "- What behavior to you expect in the following two cells?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Ahmed Walsh\n"
+    }
+   ],
+   "source": [
+    "full_name = 'Ahmed' + ' ' + 'Walsh'\n",
+    "print(full_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "==========\n"
+    }
+   ],
+   "source": [
+    "separator = '=' * 10\n",
+    "print(separator)"
+   ]
+  },
+  {
+   "source": [
+    "## Strings have a Length\n",
+    "- But numbers don't ..."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "11\n"
+    }
+   ],
+   "source": [
+    "print(len(full_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "object of type 'int' has no len()",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-8e77a6522867>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m52\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(52))"
+   ]
+  },
+  {
+   "source": [
+    "## Converting Between Types\n",
+    "- We cannot add numbers and strings."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-013270d67d3d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'2'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "print(1 + '2')"
+   ]
+  },
+  {
+   "source": [
+    "- Python doesn't know how to convert types since the answer could be either `3` or `'12'`.\n",
+    "- You can convert some types by using the type name as a function."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "3\n12\n"
+    }
+   ],
+   "source": [
+    "print(1 + int('2'))\n",
+    "print(str(1) + '2')"
+   ]
+  },
+  {
+   "source": [
+    "## Integers and Floats Mix Freely\n",
+    "- You can mix integers and floats freely in operations and Python knows what to do."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Half is 0.5\nThree squared is 9.0\n"
+    }
+   ],
+   "source": [
+    "print('Half is', 1 / 2.0)\n",
+    "print('Three squared is', 3.0 ** 2)"
+   ]
+  },
+  {
+   "source": [
+    "- Python automatically does floating-point division."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "1.5\n"
+    }
+   ],
+   "source": [
+    "print(3/2)"
+   ]
+  },
+  {
+   "source": [
+    "- Use `//` to compute integer division."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "1\n"
+    }
+   ],
+   "source": [
+    "print(3//2)"
+   ]
+  },
+  {
+   "source": [
+    "## Changing a Variable's Value\n",
+    "- Variables only change when you assign a new value to them.\n",
+    "- While spreadsheets automatically update dependent cells, Python only updates variables when they are explicitly changed."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "First is 2 and second is 5\n"
+    }
+   ],
+   "source": [
+    "first = 1\n",
+    "second = 5 * first\n",
+    "first = 2\n",
+    "print('First is', first, 'and second is', second)"
+   ]
+  },
+  {
+   "source": [
+    "- `second` did not automatically update when we updated `first`."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Exercises"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "**When reasonable, `float()` will convert a string to a number, and `int()` will convert a floating-point number to an integer. What do you expect to get when running the following code blocks? Try it out.**\n",
+    "\n",
+    "- String to number, and float to integer:\n",
+    "\n",
+    "```python\n",
+    "print('String to float:', float('3.4'))\n",
+    "print('Float to integer:', int(3.4))\n",
+    "```\n",
+    "\n",
+    "- Another string to number:\n",
+    "\n",
+    "```python\n",
+    "print('String to float:', float('Hellow world!))\n",
+    "```\n",
+    "\n",
+    "**Given this information, what do you expect this code to do?**\n",
+    "\n",
+    "```python\n",
+    "int('3.4')\n",
+    "```\n",
+    "\n",
+    "**How do we fix it?**"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "String to float: 3.4\nFloat to integer: 3\n"
+    }
+   ],
+   "source": [
+    "print('String to float:', float('3.4'))\n",
+    "print('Float to integer:', int(3.4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: 'Hello world!'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-46-e882b076f7fd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'String to float:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Hello world!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'Hello world!'"
+     ]
+    }
+   ],
+   "source": [
+    "print('String to float:', float('Hello world!'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '3.4'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-47-5e199bebc801>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'3.4'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '3.4'"
+     ]
+    }
+   ],
+   "source": [
+    "int('3.4')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "3"
+     },
+     "metadata": {},
+     "execution_count": 48
+    }
+   ],
+   "source": [
+    "int(float('3.4'))"
+   ]
+  },
+  {
+   "source": [
+    "**Knowing what you know now, how do we index the second digit from `a = 123`?**"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2\n"
+    }
+   ],
+   "source": [
+    "a = 123\n",
+    "a_string = str(a)\n",
+    "print(int(a_string[1]))"
+   ]
+  },
+  {
+   "source": [
+    "# Lesson 04 - Built-In Functions and Help"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
