--- a/python01_remote.ipynb
+++ b/python01_remote.ipynb
@@ -10,11 +10,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.7.6-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1600800159935",
+   "name": "python_defaultSpec_1600831012032",
    "display_name": "Python 3.7.6 64-bit ('base': conda)"
   }
  },
@@ -1070,6 +1070,350 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "## Questions\n",
+    "- How can I find out what built-in functions do?\n",
+    "- What kind of errors can occur in a program?\n",
+    "\n",
+    "## Objectives\n",
+    "- Explain the purpose of functions.\n",
+    "- Call built-in Python functions.\n",
+    "- Use help to display documentation for built-in functions.\n",
+    "- Describe situations in which `SyntaxError`s and `NameError`s occur."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## A Quick Note on Comments\n",
+    "- Be sure to use descriptive comments to document your code."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This sentence isn't executed by Python\n",
+    "adjustment = 0.5 # Neither is this - anything after `#` is ignored."
+   ]
+  },
+  {
+   "source": [
+    "## Calling Functions\n",
+    "- An *argument* is a value that is *passed* to a function.\n",
+    "- Functions may take zero or more arguments.\n",
+    "- `len()` takes exactly one argument.\n",
+    "- `int()`, `str()`, and `float()` create new values from an existing one.\n",
+    "- What arguments a function takes depends on how it has been defined.\n",
+    "- They key to remember is a function takes zero or more arguments (inputs) and produces some output."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "- Even when a function takes zero parameters, you must use parenthesis so Python knows you are calling a function."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "before\n\nafter\n"
+    }
+   ],
+   "source": [
+    "print('before')\n",
+    "print()             # Print with no arguments prints a blank line\n",
+    "print('after')"
+   ]
+  },
+  {
+   "source": [
+    "## Some Common Built-In Functions\n",
+    "- `max()` returns the larges value of one or more values.\n",
+    "- `min()` returns the smallest.\n",
+    "- Both work on character strings as well.\n",
+    "  - Both use 0-9, A-Z, and a-z to decide what is large and what is small."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "3\n0\n"
+    }
+   ],
+   "source": [
+    "print(max(1, 2, 3))\n",
+    "print(min('a', 'A', '0'))"
+   ]
+  },
+  {
+   "source": [
+    "## Mixing Arguments\n",
+    "- Functions might only work for certain combinations of arguments."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "'>' not supported between instances of 'str' and 'int'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-3f049acf3762>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'a'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: '>' not supported between instances of 'str' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "print(max(1, 'a'))"
+   ]
+  },
+  {
+   "source": [
+    "## Default Values\n",
+    "- Some functions have pre-defined default values.\n",
+    "- `round()` defaults to zero decimal places, but you can specify more explicitly."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "4"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "round(3.712)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "3.7"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "round(3.712, 1)"
+   ]
+  },
+  {
+   "source": [
+    "## Getting Help\n",
+    "- Each function comes with built-in documentation.\n",
+    "- Use `help()` to look up how to use a function."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Help on built-in function round in module builtins:\n\nround(number, ndigits=None)\n    Round a number to a given precision in decimal digits.\n    \n    The return value is an integer if ndigits is omitted or None.  Otherwise\n    the return value has the same type as the number.  ndigits may be negative.\n\n"
+    }
+   ],
+   "source": [
+    "help(round)"
+   ]
+  },
+  {
+   "source": [
+    "- Jupyter notebooks also support clicking on the function and holding <kbd>Shift</kbd>+<kbd>Tab</kbd>."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Syntax Errors\n",
+    "- If code is typed incorrectly, Python reports a `SytaxError`."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-9-21050ec4d4a3>, line 2)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-21050ec4d4a3>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    name = 'Feng\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Forgot to close the quote marks around the string\n",
+    "name = 'Feng"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-10-51e742de2b74>, line 2)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-51e742de2b74>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    age = = 52\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# An extra `=` in the assignment\n",
+    "age = = 52"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-11-7b9f7a40f599>, line 1)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-7b9f7a40f599>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print('hello world'\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello world'"
+   ]
+  },
+  {
+   "source": [
+    "- Python tries to point out the source of the error with the `^`.\n",
+    "- Often the most important part of the error message is the last line.\n",
+    "- Do not forget you can Google if an error doesn't make sense."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Runtime Errors\n",
+    "- Runtime errors (like `NameError`) occur when something goes wrong while the program is running."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'aege' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-19cbc7eb3761>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m53\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mremaining\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0maege\u001b[0m  \u001b[0;31m# Spelled 'age' wrong\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'aege' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "age = 53\n",
+    "remaining = 100 - aege  # Spelled 'age' wrong"
+   ]
+  },
+  {
+   "source": [
+    "## Every Function Returns Something"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "- Python requires every function to return something.\n",
+    "- If a function doesn't return something, Python forces it to return the special datatype `None`."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "example\nThe result of print is None\n"
+    }
+   ],
+   "source": [
+    "result = print('example')\n",
+    "print('The result of print is', result)"
+   ]
   },
   {
    "cell_type": "code",
